<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        android:src="@drawable/topbackground"
        />

    <EditText
        android:id="@+id/edittext_newName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edittext_custom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="Name"
        android:textColorHint="@color/divider"
        android:drawableTint="#FF9800"
        android:textColor="@color/primary_text"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="20dp"

        />

    <EditText
        android:id="@+id/edittext_newpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_password"
        android:textColorHint="@color/divider"
        android:textColor="@color/primary_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_custom"
        android:drawableTint="#FF9800"
        android:drawableStart="@drawable/ic_https_black_24dp"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/edittext_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/divider"
        android:textColor="@color/primary_text"
        android:background="@drawable/edittext_custom"
        android:drawableTint="#FF9800"
        android:drawableStart="@drawable/ic_https_black_24dp"
        android:drawablePadding="20dp"
        />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/new_register"
        android:textColor="@color/background"
        android:background="@drawable/edittext_custom"
        android:backgroundTint="@color/primary"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/existing_user"
            android:textColor="@color/divider"
            />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:text="@string/registerActivitylogin"
            android:textColor="@color/primary"/>


    </LinearLayout>





</LinearLayout>